# esgf-automate

./: Dockerfile  README.md  pyproject.toml  run_action_provider.sh
deploy/: gunicorn_config.py
esgf_automate/: action_provider_main.py  extract_action_provider.py  helpers.py  input_schema.json  metadata.py  persistence.py
flows/: README.md  esgf_ingest_flow.json  input_schema.json  sample_input.json
