[tool.poetry]
name = "esgf_automate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
esgf-extract-local = "esgf_automate.extract_action_provider:main"

[tool.poetry.dependencies]
python = "^3.8"
globus-action-provider-tools = "^0.11.3"
# globus-automate-client = "^0.11.4"
# boto3 = "^1.17.80"
# botocore = "^1.20.80"
# boto3-stubs = {version="^1.9", extras = ["dynamo"]}
Flask = "^2.0.1"
arrow = "^1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pytest = "^6.2.4"
importmagic = "^0.1.7"
epc = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
